--- a/config/default/config.json
+++ b/config/default/config.json
@@ -9,9 +9,10 @@
 		"logFileName": "lisk.log"
 	},
 	"rpc": {
-		"enable": false,
+		"enable": true,
 		"mode": "ipc",
-		"port": 8080
+		"port": 8080,
+		"host": "127.0.0.1"
 	},
 	"genesisConfig": {
 		"blockTime": 10,
