--- a/config/default/config.json
+++ b/config/default/config.json
@@ -19,23 +19,20 @@
 		"communityIdentifier": "sdk",
 		"maxPayloadLength": 15360,
 		"bftThreshold": 68,
-		"minFeePerByte": 1000,
+		"minFeePerByte": 0,
 		"baseFees": [
 			{
 				"moduleID": 5,
 				"assetID": 0,
-				"baseFee": "1000000000"
+				"baseFee": "10000000"
 			}
 		],
-		"rewards": {
-			"milestones": ["500000000", "400000000", "300000000", "200000000", "100000000"],
-			"offset": 2160,
-			"distance": 3000000
-		},
-		"minRemainingBalance": "5000000",
+		"minRemainingBalance": "10",
 		"activeDelegates": 101,
 		"standbyDelegates": 2,
-		"delegateListRoundOffset": 2
+		"delegateListRoundOffset": 2,
+		"tipDepositAddress": "3ea5388145536c236ba84b4f6ba95a557a230f02",
+		"tipFeePercentage": 10
 	},
 	"forging": {
 		"force": true,
